eicb-p1/src/test/testcases/errors/p1_public/task_4/bool_err_1.syn.mavl
function void main(){
    switch (true a) {}
}